# ai-driven-dev-bbs

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  compose.yaml
app/: .env.example  Cargo.toml  Dockerfile
app/.sqlx/: query-16514e484cd68dffd2484bbc8212aaf5690509d7946da93a844316aa0b7eca2f.json  query-204143b2f18fed7ffcc68cb12b7c65de19aa2001a4c4c305d4a7f18d7b2b96de.json  query-35b37066518617e2fcdd251b4a53f1dba32ebdb5420340f7eada18f160429722.json  query-4098b3d3b2c3ff053a558f70a162fa559931c162152c1624250eda3e7619c0cf.json  query-455b3e7198b56b6c7551545b4fb2abaf07308c328fd60326dcca667bb8ea2584.json  query-4ab8b07110b614ceceed9ce97546890818f9c37350d3f1b7b0cb869f589ee707.json  query-4f2db5543520c258393e91d66f11271eb5ed00f314f15949567c9713783190ea.json  query-516a822365f9dc1409f26da9e04d59fa73d2cd65402e5cb83959bbf73c94a392.json  query-56055516fccb421381dd78d0c81701d6ede3dbac292abdd8134c1873239746d9.json  query-594b87fc77257eb1d843552c40dd23a1e0e68acc883ca58347d3e366982b2aa4.json  query-5d3eeb6792eccda8fa58ae6fa73b7569c9056f3dab25c78ef416f1562a36f231.json  query-5f3f8839dc3083b0c995cf9e089c1031273fad83db3300cbc36c02d2ab203715.json  query-7d96a0f0a67224c54c0e30b1f802649b5eb9fc024b584c0fd24e110ea088d439.json  query-82836f4b2c0593b5899f8702a12c7b4b2d363e9cf7796a2bdf2a512520bcb7a9.json  query-84ed794333b301514e2440ee27e304d5f05716c5e3c08ab05a46ecb203e62833.json  query-94dc07cf06375ad67aad84f28df8a2aaf751ddcdc2f177dc374a33590c600d13.json  query-957d8fbed1ce715026eadecd526b0652e52622265346e8fffdc38fc015cf173e.json  (+9 more)
app/migrations/: 0001_init.sql
app/src/: lib.rs  (+1 more)
(+165 files in other folders)
