[package]
name = "bbs"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.16.0"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
dotenvy = "0.15.7"
serde = { version = "1.0.229", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "time", "uuid"] }
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.24.0", features = ["v4"] }
